[package]
name = "hedge"
version = "0.0.7"
authors = ["Chip Collier <photex@gmail.com>"]

description = "An index based half-edge mesh implementation."

repository = "https://gitlab.com/photex/hedge"

keywords = ["halfedge", "half-edge", "mesh", "graphics", "meshes"]
categories = ["data-structures"]

license = "MPL-2.0"

# crates will do this automatically!
#documentation = "https://docs.rs/hedge"

[dependencies]
