[package]
name = "hedge"
version = "0.0.9"
authors = ["Chip Collier <photex@gmail.com>"]

description = "An index based half-edge mesh implementation."


keywords = ["halfedge", "half-edge", "mesh", "graphics", "meshes"]
categories = ["data-structures"]

license = "MPL-2.0"

documentation = "https://docs.rs/hedge"
homepage = "https://github.com/photex/hedge"
repository = "https://github.com/photex/hedge"
readme = "README.md"

[dependencies]
cgmath = "0.14.1"
